<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="title_activity_loadscreen">loadscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="weather_api_key" translatable="false" tools:ignore="ExtraTranslation">5f1e30c17c10fe0ffa25a93452225b33</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="option_location">Location</string>
    <string name="app_name">Carduino</string>
    <string name="option_climate">Climate</string>
    <string name="option_drive">Drive</string>
    <string name="option_summon">Summon</string>
    <string name="option_controls">Controls</string>
    <string name="summon_forward">Forward</string>
    <string name="summon_backward">Backward</string>
    <string name="summon_stop">Stop</string>
    <string name="climate_on">Auto Climate On</string>
    <string name="climate_off">Auto Climate Off</string>
    <string name="climate_val">"Interior at "</string>
    <string name="title_activity_maps">Map</string>
    <string name="option_settings">Settings</string>
    <string name="settings_auto">Automation</string>
    <string name="settings_lights">Headlights and Position Lights</string>
    <string name="settings_stop">Crash Detect</string>
    <string name="settings_notif">Notifications</string>
    <string name="settings_on">Car On</string>
    <string name="settings_parked">Car Parked</string>
    <string name="settings_low_battery">Low battery</string>
    <string name="settings_driving">Driving</string>
    <string name="settings_accelerometer">Accelerometer</string>
    <string name="settings_export">Export</string>
    <string name="settings_import">Import</string>
    <string name="settings_lights_desc">Turn on/off the lights depending on the light level</string>
    <string name="settings_current">Current:</string>
    <string name="settings_stop_desc">Maximum distance to detect an obstacle</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_gyroscope">Gyroscope</string>
    <string name="settings_version">Version</string>
    <string name="settings_info">Information</string>
    <string name="settings_made_by">Made by</string>
    <string name="settings_last_update">Last update</string>
    <string name="settings_on_desc">Recieve a notification whenever your car is unlocked</string>
    <string name="settings_parked_desc">Recieve a notification whenever your car gets parked</string>
    <string name="settings_low_battery_desc">Recieve a notification when your car starts running out of battery</string>
    <string name="settings_vibration_desc">Make the device vibrate</string>
    <string name="settings_accelerometer_desc">Use the device\'s accelerometer to make the car move</string>
    <string name="settings_gyroscope_desc">Use your device\'s gyroscope to make your car turn</string>
    <string name="settings_name">Name</string>
    <string name="settings_default">Use default values</string>
    <string name="settings_default_config">Use the default config to avoid load times</string>
    <string name="version" translatable="false">v1.0.0</string>
    <string name="error_car_off">Make sure the car is on</string>
    <string name="error_no_bt">Your device is not Bluetooth compatible</string>
    <string name="error_bt_turn_on">Bluetooth has been activated</string>
    <string name="map_yah">You are here</string>
    <string name="map_error_permission">The app was not allowed to access your location</string>
    <string name="map_unk">Unknown</string>
    <string name="error_no_bt_con">No connection is stablished</string>
    <string name="msg_battery_level_motor">Motors battery level</string>
    <string name="msg_battery_level_arduino">Arduino battery level at</string>
    <string name="settings_loc_desc">Use device\'s location instead of the one from the car</string>
    <string name="settings_loc">Use device\'s GPS</string>
    <string name="error_loc_off">GPS is off, loading last saved location</string>
    <string name="controls_info_location" translatable="false">GPS</string>
    <string name="controls_info_battery">Battery</string>
    <string name="controls_info_car">Car</string>
    <string name="controls_last_update">"Last Update: "</string>
    <string name="controls_send_command">Send Command</string>
    <string name="controls_battery_hpr">Highest Peak Recorded:</string>
    <string name="controls_battery_blp">Battery Left:</string>
    <string name="controls_battery_lrv">Lowest Reachable Value:</string>
    <string name="controls_battery_hrv">Highest Reachable Value:</string>
    <string name="controls_battery_idle">In idle state</string>
    <string name="controls_battery_motors">Motors\' Battery</string>
    <string name="controls_battery_arduino">Arduino\'s Battery</string>
    <string name="controls_gps_sats">Satellites:</string>
    <string name="controls_gps_lat">Latitude:</string>
    <string name="controls_gps_lon">Longitude:</string>
    <string name="controls_gps_kmph">Speed:</string>
    <string name="controls_car_gear">Gear:</string>
    <string name="controls_car_temp">Temperature:</string>
    <string name="controls_car_ll">Light level:</string>
    <string name="controls_car_dto">Distance to front:</string>
    <string name="controls_car_hl">Headlights:</string>
    <string name="controls_car_pl">Position lights:</string>
    <string name="controls_car_bl">Blinkers:</string>
    <string name="controls_car_speed">Speed:</string>
    <string name="controls_info_sensors">Sensors</string>
    <string name="controls_car_autostop">Autostop:</string>
    <string name="controls_blinkers_hazzard">Hazzard</string>
    <string name="controls_blinkers_left">Left</string>
    <string name="controls_blinkers_right">Right</string>
    <string name="controls_blinkers_none">None</string>
    <string name="controls_car_locked">Lock:</string>
    <string name="controls_car_vent">Vent:</string>
    <string name="drive_autoc_on">Collision detection on</string>
    <string name="drive_autoc_off">Collision detection off</string>
    <string name="drive_autol_on">Auto lights on</string>
    <string name="drive_autol_off">Auto lights Off</string>
    <string name="drive_acc_on">Accelerometer On</string>
    <string name="drive_acc_off">Accelerometer Off</string>
    <string name="notification_battery_low_arduino">Arduino\'s battery is running out</string>
    <string name="notification_battery_low_motor">Motor\'s battery is running out</string>
    <string name="notification_car_parked">Your car has been parked</string>
    <string name="notification_car_unlocked">Your car has been unlocked</string>
    <string name="notification_battery">"Battery at "</string>
    <string name="notification_no_sats">No connection with the satellite</string>
</resources>
