<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlsActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/BACK_BUTTON"
        android:layout_alignBottom="@+id/BACK_BUTTON"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:text="@string/option_controls"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/def_pointer_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BACK_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@mipmap/ic_chevron_l_foreground" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/BACK_BUTTON"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/LAST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/divider"
            android:layout_alignStart="@+id/WRAPPER"
            android:gravity="bottom|center"
            android:text="@string/controls_last_update"
            android:textColor="@color/gray_1" />

        <LinearLayout
            android:id="@+id/WRAPPER"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/CONSOLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/controls_send_command"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHighlight="@color/common_google_signin_btn_text_light_focused"
                android:textColorLink="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/SEND"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_send_cmd" />

            <ImageButton
                android:id="@+id/LIST"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_list_cmd" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/WRAPPER"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="-5dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/divider"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CAR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_info_car"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/LOCK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_locked" />

                <TextView
                    android:id="@+id/SPEED"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_speed" />

                <TextView
                    android:id="@+id/GEAR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_gear" />

                <TextView
                    android:id="@+id/HEADLIGHTS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_hl" />

                <TextView
                    android:id="@+id/POSLIGHTS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_pl" />

                <TextView
                    android:id="@+id/BLINKERS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_bl" />

                <TextView
                    android:id="@+id/VENT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_vent" />

                <TextView
                    android:id="@+id/AUTOSTOP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_autostop" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/BATTERY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_info_battery"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/ABAT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/controls_battery_arduino"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/ABL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_battery_blp" />

                <TextView
                    android:id="@+id/AHPR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_battery_hpr" />

                <TextView
                    android:id="@+id/MBAT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/controls_battery_motors"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/MBL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_battery_blp" />

                <TextView
                    android:id="@+id/MHPR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_battery_hpr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/GPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_info_location"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/SATS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_gps_sats" />

                <TextView
                    android:id="@+id/LAT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_gps_lat" />

                <TextView
                    android:id="@+id/LON"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_gps_lon" />

                <TextView
                    android:id="@+id/GPS_SPEED"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_gps_kmph" />

                <TextView
                    android:id="@+id/SENSORS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_info_sensors"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/LIGHT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_ll" />

                <TextView
                    android:id="@+id/TEMP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_temp" />

                <TextView
                    android:id="@+id/DTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_car_dto" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>