<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummonActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BACK_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@mipmap/ic_chevron_l_foreground" />

    <LinearLayout
        android:id="@+id/FW_WRAPPER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BACK_BUTTON"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </RelativeLayout>

        <Button
            android:id="@+id/FORWARD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.5"
            android:text="@string/summon_forward"
            android:textColor="@color/def_pointer_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BW_WRAPPER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/divider3"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </RelativeLayout>

        <Button
            android:id="@+id/BACKWARD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/divider2"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.5"
            android:text="@string/summon_backward"
            android:textColor="@color/def_pointer_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BW_WRAPPER"
        android:layout_below="@+id/FW_WRAPPER"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/mtv7" />

    <LinearLayout
        android:id="@+id/STOP_WRAPPER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </RelativeLayout>

        <Button
            android:id="@+id/STOP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.5"
            android:text="@string/summon_stop"
            android:textColor="@color/def_pointer_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/STOP_WRAPPER"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/BACK_BUTTON"
        android:layout_alignBottom="@+id/BACK_BUTTON"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:text="@string/option_summon"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/def_pointer_color"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/option_summon" />

</RelativeLayout>