<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClimateActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/cbg" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BACK_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@mipmap/ic_chevron_l_foreground" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/BACK_BUTTON"
        android:layout_alignBottom="@+id/BACK_BUTTON"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:text="@string/option_climate"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/def_pointer_color"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/option_climate" />

    <LinearLayout
        android:id="@+id/SCROLLVIEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </RelativeLayout>

            <ImageButton
                android:id="@+id/DECREASE_TEMP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:rotation="180"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_chevron_r_foreground" />

            <TextView
                android:id="@+id/TEMP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="fill_vertical"
                android:text=" 70º"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/INCREASE_TEMP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_chevron_r_foreground" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </RelativeLayout>

            <com.manojbhadane.QButton
                android:id="@+id/TEMP_TOGGLER"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_weight="0.2"
                android:fontFamily="@font/abel"
                android:text="@string/climate_on"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:qb_backgroundColor="@android:color/transparent"
                app:qb_radius="20"
                app:qb_strokeColor="@android:color/white"
                app:qb_strokeWidth="3"
                tools:text="@string/climate_on" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/TEMP_TRACKER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/climate_val"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/FAN_IMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SCROLLVIEW"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_fan_foreground" />

</RelativeLayout>